# ProyectoPOO

./: CMakeLists.txt  Centellas.cpp  Centellas.h  Criaturas.cpp  Criaturas.h  LentosdeRaiz.cpp  LentosdeRaiz.h  Metamorfitas.cpp  Metamorfitas.h  Nodo.cpp  Nodo.h  NodoJovenPorSiempre.cpp  NodoJovenPorSiempre.h  NodoNormal.cpp  NodoNormal.h  NodoRegenerativo.cpp  NodoRegenerativo.h  NodoReproducion.cpp  NodoReproducion.h  NodoVenenoso.cpp  NodoVenenoso.h  README.md  calificaciones.md  main.cpp  uml.md
